Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-126822

Windows accessibility crash/assert in Gallery example

XMLWordPrintable

    • Windows
    • 1ee349bf9 (dev), 33c7170fc (6.8)

      MSVC 2022, Win11, debug

      Reproduce:

      1. Run Widgets example
      2. Start narrator
      3. Click in password widget

      Expected behavior:

      • Cursor is placed in QLineEdit

      Actual behavior:

      • Assert in QWindowsUiaTextRangeProvider::ExpandToEnclosingUnit

       

      Comment:

      QWindowsUiaTextRangeProvider::ExpandToEnclosingUnit does not take into account that QAccessibleTextInterface::text() may return null QString even if QAccessibleTextInterface::characterCount returns non-zero. text() can return null QString if echo-mode is set to Password.

       

        For Gerrit Dashboard: QTBUG-126822
        # Subject Branch Project Status CR V

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            johanseg Jøger Hansegård
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes